[package]
name = "oanda_lib"
version = "0.1.0"
authors = ["nicokaegi <kaeginick63@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
tokio = { version = "1.9.0", features = ["full"] }
json = "0.12.4"
chrono = "0.4.19"
