[package]
name = "oanda_coms_lib"
version = "0.1.0"
authors = ["nicokaegi <kaeginick63@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oanda_coms_lib"
crate-type = ["cdylib"]

[dependencies]
oanda_lib = {path = "../oanda_coms_lib"}
lazy_static = "1.4.0"

[dependencies.pyo3]
version = "0.14.5"
features = ["extension-module"]
